# 1D_transport_equation

./: CMakeLists.txt  README.md  doxy_config
src/: main.cpp
src/Config/: CMakeLists.txt  Config.h
src/Zone/: CMakeLists.txt  Zone.cpp  Zone.h
wdir/: config.json
